2008-08-10  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (wait-for-event): Add timeout argument.  This is used
	for :fd-handler and :sigio style where we only process events as
	long as we don't block.
	(wait-for-event/event-loop, read-event)
	(decode-message, receive-if): Ditto.
	(process-requests): Renamed from read-from-emacs.
	(handle-requests): Renamed from handle-request. Take timeout
	argument.  Update callers.
	(process-available-input): Deleted.
	(with-swank-error-handler): Renamed from
	with-reader-error-handler.
	(with-connection): Use it.

2008-08-10  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (invoke-slime-debugger): New function.
	Analagous to cl:invoke-debugger.
	(swank-debugger-hook): Use it.

2008-08-09  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-quit-lisp): Optionally send kill signal.
	(slime-quit-connection-at-point): Disconnect after some timeout.

2008-08-09  Helmut Eller  <heller@common-lisp.net>

	Fixes for heap dumping.

	* swank.lisp (*log-output*): Don't initialize at load-time,
	otherwise the stream would end up in a heap image.

2008-08-09  Helmut Eller  <heller@common-lisp.net>

	* swank-lispworks.lisp (defimplementation): Record location.

2008-08-09  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (*maximum-pipelined-output-chunks*): New variable

2008-08-09  Helmut Eller  <heller@common-lisp.net>

	Display the "Use default debugger" restart more prominently
	for testing.

	* swank.lisp (swank-debugger-hook): Bind a user visible restart
	to invoke the native debugger.
	(*global-debugger*): Make this nil by default.
	(sldb-loop): Minor cleanups.
	(sldb-break-with-default-debugger): Invoke the native debugger
	on top of the slime debugger.

	* slime.el (slime-simple-completions): Bind slime-current-thread
	to t so that completion is peformed in a fresh thread.
	(sldb-setup): Always pop to the debugger buffer.
	(sldb-activate): Optionally select the window.
